refactor: `StackArrayList` (#5356)